hphp/hack/test/typecheck/super_constraint_12.php.like_types.exp
File "super_constraint_12.php", line 13, characters 10-20:
Invalid return type (Typing[4110])
File "super_constraint_12.php", line 8, characters 23-24:
Some type constraint(s) are violated here
File "super_constraint_12.php", line 8, characters 23-24:
Tu is a constrained type parameter
File "super_constraint_12.php", line 12, characters 30-30:
Expected A
File "super_constraint_12.php", line 8, characters 23-24:
But got dynamic
